Fix overflow scrolling on mobile

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -312,7 +312,8 @@ header
   background: $content-background-color
   border-top: 2px solid $background-color
   display: none
-  overflow: scroll
+  overflow: hidden
+  overflow-y: scroll
   padding-bottom: 128px
   text-align: center
 
